add gif edit function

--- a/gif/gif_app/templates/index.html
+++ b/gif/gif_app/templates/index.html
@@ -20,7 +20,7 @@
                         <button type="button" class="btn btn-primary" id="archive"><span class="glyphicon glyphicon-star archive_item"></span></button>
                     </div>
                     <div id="gif" class="_content_internal add_radis">
-                        <img src="../static/img/1.gif" alt="" id="img">
+                        <img src="../static/img/1_test.gif" alt="" id="img">
                     </div>
                     <div id="comment_btn" class="_content_internal">
                         <button type="button" class="btn btn-primary" id="do_comment"><span class="glyphicon glyphicon-comment btn_item"></span> comment</button>
@@ -43,5 +43,10 @@
             </div>
             </div>
     </div>
+    <script>
+
+
+    </script>
 </body>
+
 </html>
