--- a/gif/gif_app/templates/index.html
+++ b/gif/gif_app/templates/index.html
@@ -20,19 +20,33 @@
                         <button type="button" class="btn btn-primary" id="archive"><span class="glyphicon glyphicon-star archive_item"></span></button>
                     </div>
                     <div id="gif" class="_content_internal add_radis">
-                        <img src="../static/img/1_test.gif" alt="" id="img">
+                        <img src="../static/img/1.gif" alt="" id="img">
                     </div>
                     <div id="comment_btn" class="_content_internal">
                         <button type="button" class="btn btn-primary" id="do_comment"><span class="glyphicon glyphicon-comment btn_item"></span> comment</button>
                         <button type="button" class="btn btn-primary" id="copyright"><span class="glyphicon glyphicon-copyright-mark btn_item"></span> copyright</button>
                     </div>
                 </div>
-                <div id="comment">
-
-                </div>
                 <div id="info">
-
+                    <div id="info_content" class="_content_internal add_radis">
+                        <div id="refer_link" class="_content_internal add_radis"><span class="glyphicon glyphicon-globe btn_item"></span> From bbs.hupu.com</div>
+                    </div>
                 </div>
+                <div id="tags">
+                    <div id="tags_content" class="_content_internal add_radis">
+                        <ul>
+                            <li><div class="tags_details add_radis">1123123123232345</div></li>
+                            <li><div class="tags_details add_radis">123</div></li>
+                            <li><div class="tags_details add_radis">123</div></li>
+                            <li><div class="tags_details add_radis">123</div></li>
+                            <li><div class="tags_details add_radis">123</div></li>
+                            <li><div class="tags_details add_radis">1123123123232345</div></li>
+                            <li><div class="tags_details add_radis">123</div></li>
+                            <li><div class="tags_details add_radis">11231231345</div></li>
+                        </ul>
+                    </div>
+                </div>
+
             </div>
             <div id="ads_content" class="border_test col-md-3">
                 <div id="_ads">
@@ -41,7 +55,7 @@
                     </div>
                 </div>
             </div>
-            </div>
+        </div>
     </div>
     <script>
 
