--- a/gif/gif_app/templates/test.html
+++ b/gif/gif_app/templates/test.html
@@ -36,7 +36,8 @@
                 <div class="border_circle" id="gif_left">
                     <div class="gif_text">Demo...</div>
                     <div class="gif_pic">
-                        <img src="../static/img/1.gif" alt="">
+                        <!--<img src="../static/img/1.gif" alt="">-->
+                        <img src={{image_path}} alt="">
                     </div>
                     <div class="pull-right">
                         <button type="button" class="btn btn-primary"><span class="glyphicon glyphicon-thumbs-up"></span>Upvote</button>
