--- a/gif/static/self/gif.css
+++ b/gif/static/self/gif.css
@@ -1,13 +1,13 @@
 #content
 {
-    margin: auto 10px;
-    margin-top:60px;
+
+    margin-top:50px;
     background: white;
     border-radius: 5px;
 }
 #ads_content
 {
-    margin: auto auto;
+    margin-left:10px;
     margin-top:60px;
     background: white;
     border-radius: 5px;
@@ -18,31 +18,42 @@ body
 }
 .border_test
 {
-    border: solid white 1px;
+    border: solid red 1px;
 }
 
 ._content_internal
 {
     margin: 5px 5px;
 }
+.copy_right_class
+{
+    margin-top: 10px;
+}
+
+.source_class
+{
+    margin-top: 20px;
+    margin-left: 20px;
+}
 #gif, #ads_vote
 {
     background: #EEEEEE;
     text-align:center;
 }
-#info_content
+#info_content, #paging_content, #ad_bottom_content
 {
     background: #EEEEEE;
     text-align:left;
     padding: 10px 5px;
     margin: 10px 5px;
+    height: 25%;
 }
 #tags_content
 {
     background: #EEEEEE;
     text-align:left;
     padding: 1px auto;
-    width:50%;
+    width:70%;
 }
 .add_radis{
     border-radius: 5px;
@@ -61,15 +72,13 @@ body
     background: #E93844;
     border: solid #E93844 1px;
     border-radius: 9px;
-
-
 }
 #archive, #do_comment, #copyright
 {
     background: #C8C8C8;
     border: solid #C8C8C8 1px;
     border-radius: 7px;
-    margin: 0 10px;
+    margin: auto 10px;
 }
 #refer
 {
@@ -92,15 +101,36 @@ margin: 10px auto;
     background: #F6E5C1;
     border: solid #F6E5C1 1px;
     text-align: center;
-    margin: 3px 3px;
-    padding: 2px 10px;
+    margin: 3px 1px;
+    padding: 2px 1px;
 }
 
 li{
     display: inline-block;
-    padding-right: 0px;
+    padding: 0px 20px;
 }
 ul{
-    margin: 5px -5px;
+    margin: 5px -8%;
 
 }
+#paging_before_btn, #paging_after_btn
+{
+    background: #EEEEEE;
+    border: solid #EEEEEE 1px;
+    border-radius: 7px;
+    margin: auto auto;
+    height: 30%;
+    width: 40%;
+}
+.btn_paging_item
+{
+    color: black;
+    font-size: 20px;
+}
+img{
+     height:80%;
+     width: 80%;
+     max-height: 450px;
+     max-width: 400px;
+     vertical-align:middle;
+ }
