make manage img width auto show

--- a/gif/gif_app/templates/manage.html
+++ b/gif/gif_app/templates/manage.html
@@ -39,7 +39,7 @@
                 </li>
                 <li class="img_list_li">
                     <div class="img_list_div">
-                        <img src="../static/img/2.gif" alt="" class="img_list">
+                        <img src="../static/img/0.gif" alt="" class="img_list">
                     </div>
                 </li>
                 <li class="img_list_li">
@@ -59,7 +59,22 @@
                 </li>
                 <li class="img_list_li">
                     <div class="img_list_div">
+                        <img src="../static/img/1.gif" alt="" class="img_list">
+                    </div>
+                </li>
+                <li class="img_list_li">
+                    <div class="img_list_div">
                         <img src="../static/img/2.gif" alt="" class="img_list">
+                    </div>
+                </li>
+                <li class="img_list_li">
+                    <div class="img_list_div">
+                        <img src="../static/img/2.gif" alt="" class="img_list">
+                    </div>
+                </li>
+                <li class="img_list_li">
+                    <div class="img_list_div">
+                        <img src="../static/img/1.gif" alt="" class="img_list">
                     </div>
                 </li>
             </ul>
