--- a/gif/gif_app/templates/manage.html
+++ b/gif/gif_app/templates/manage.html
@@ -3,11 +3,13 @@
     <meta charset="UTF-8">
     <title>...</title>
     <link rel="stylesheet" type="text/css" href="../static/bootstrap/bootstrap.css">
+    <link rel="stylesheet" type="text/css" href="../static/gifplayer/gifplayer.css">
     <link rel="stylesheet" type="text/css" href="../static/self/common.css">
     <script type="text/javascript" src="../static/jquery-easyui/jquery.min.js"></script>
     <script type="text/javascript" src="../static/bootstrap/bootstrap.js"></script>
     <script type="text/javascript" src="../static/jquery-easyui/jquery.easyui.min.js"></script>
     <script type="text/javascript" src="../static/self/common.js"></script>
+    <script type="text/javascript" src="../static/gifplayer/jquery.gifplayer.js"></script>
     <link rel="stylesheet" type="text/css" href="../static/self/gif.css">
     <style>
 
@@ -33,57 +35,57 @@
             <ul class="img_ul">
                 <li class="img_list_li">
                     <div class="img_list_div">
-                        <img src="../static/img/2.gif" alt="" class="img_list">
-                    </div>
-
-                </li>
-                <li class="img_list_li">
-                    <div class="img_list_div">
-                        <img src="../static/img/0.gif" alt="" class="img_list">
+                        <img src="../static/img/0.gif" class="img_list gifs">
                     </div>
                 </li>
                 <li class="img_list_li">
                     <div class="img_list_div">
-                        <img src="../static/img/2.gif" alt="" class="img_list">
+                        <img src="../static/img/0.gif"  class="img_list gifs">
                     </div>
                 </li>
                 <li class="img_list_li">
                     <div class="img_list_div">
-                        <img src="../static/img/2.gif" alt="" class="img_list">
+                        <img src="../static/img/1.gif"  class="img_list gifs">
                     </div>
                 </li>
                 <li class="img_list_li">
                     <div class="img_list_div">
-                        <img src="../static/img/2.gif" alt="" class="img_list">
+                        <img src="../static/img/2.gif"  class="img_list gifs">
                     </div>
                 </li>
                 <li class="img_list_li">
                     <div class="img_list_div">
-                        <img src="../static/img/1.gif" alt="" class="img_list">
+                        <img src="../static/img/1.gif"  class="img_list gifs">
                     </div>
                 </li>
                 <li class="img_list_li">
                     <div class="img_list_div">
-                        <img src="../static/img/2.gif" alt="" class="img_list">
+                        <img src="../static/img/0.gif"  class="img_list gifs">
                     </div>
                 </li>
                 <li class="img_list_li">
                     <div class="img_list_div">
-                        <img src="../static/img/2.gif" alt="" class="img_list">
+                        <img src="../static/img/0.gif"  class="img_list gifs">
                     </div>
                 </li>
                 <li class="img_list_li">
                     <div class="img_list_div">
-                        <img src="../static/img/1.gif" alt="" class="img_list">
+                        <img src="../static/img/0.gif"  class="img_list gifs">
+                    </div>
+                </li>
+                <li class="img_list_li">
+                    <div class="img_list_div">
+                        <img src="../static/img/2.gif"  class="img_list gifs">
                     </div>
                 </li>
             </ul>
         </div>
-        <div id="upload_content" class="row">
-
-        </div>
-
-
+        <div id="upload_content" class="row"></div>
     </div>
+    <script>
+        <!--$('.gifs').each(function(){-->
+        <!--$(this).gifplayer();-->
+        <!--});-->
+    </script>
 </body>
 </html>
