--- a/gif/gif_app/templates/index.html
+++ b/gif/gif_app/templates/index.html
@@ -52,12 +52,12 @@
                     <div id="paging_content" class="_content_internal add_radis">
                         <div class="row">
                             <div class="col-xs-2 col-sm-2 col-md-2"></div>
-                            <div class="col-xs-4 col-sm-4 col-md-4" style="width:30% float:left">
+                            <div class="col-xs-4 col-sm-4 col-md-4" style="width:30%; float:left">
                                 <button type="button" class="btn btn-primary" id="paging_before_btn">
                                     <span class="glyphicon glyphicon-arrow-left btn_paging_item"></span>
                                 </button>
                             </div>
-                            <div class="col-xs-4 col-sm-4 col-md-4 pull-right" style="width:30% float:left">
+                            <div class="col-xs-4 col-sm-4 col-md-4 pull-right" style="width:30%; float:left">
                                 <button type="button" class="btn btn-primary" id="paging_after_btn">
                                     <span class="glyphicon glyphicon-arrow-right btn_paging_item"></span>
                                 </button>
