--- a/gif/static/self/gif.css
+++ b/gif/static/self/gif.css
@@ -62,6 +62,8 @@ body
 {
     border-radius:20px;
     margin: 5px 5px;
+    height: 400px;
+    width: auto;
 }
 .btn
 {
@@ -127,13 +129,7 @@ ul{
     color: black;
     font-size: 20px;
 }
-img{
-     height:80%;
-     width: 80%;
-     max-height: 450px;
-     max-width: 400px;
-     vertical-align:middle;
- }
+
  .img_list
  {
 
