delete scraped info

--- a/gif/gif_app/templates/manage.html
+++ b/gif/gif_app/templates/manage.html
@@ -25,7 +25,7 @@
         <i id="menuline" class="line" style="display: inline; width: 75px; left: 1009.44px;"></i>
         <div id="headerinner">
             <div class="logo">
-                <img src="../static/img/logo.png" alt="ligerui">
+                <img src="../static/img/logo.png" alt="">
             </div>
             <div class="menu" id="headermenu">
                 <ul class="list-inline" id="menuitems">
